Reduced mobile font size to prevent horizontal scrolling

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -217,6 +217,10 @@ p {
   .mobile-reduce {
     font-size: 38px;
   }
+
+  .email {
+    font-size: 16px;
+  }
   .footer {
     font-size: 16px;
   }
